pdf-extract-backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
  - host: backend.pdf-extract.com
    http:
      paths:
      - path: /analyse-pdf
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
